--- a/public/assets/css/style-starter.css
+++ b/public/assets/css/style-starter.css
@@ -15,7 +15,7 @@ Author URL: http://w3layouts.com
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1 --bs-pink: #d63384;
     --bs-red: #dc2137;
-    --bs-orange: #fd7e14;
+    --bs-orange: #dc2137;
     --bs-yellow: #ffc107;
     --bs-green: #198754;
     --bs-teal: #20c997;
